# ProjectPadinovskiy

./: .gitignore  README.md  algs.py  algs_complete_uncertainty.py  algs_partial_uncertainty.py  algs_stochastic_uncertainty.py  cli.py  core.py  eval_economarket.sh  module11.py  pyproject.toml  schemas.py  test_all.sh
Linux_scripts/: example.sh  task4a.sh  task4b.sh  task6.sh  task7.sh  task8.sh
Windows_scripts/: example.bat  task4a.bat  task4b.bat  task6.bat  task7.bat  task8.bat
input/: example.txt  example_ml.txt  task4a.txt  task4b.json  task4b.txt  task6.json  task6.txt  task7.json  task7.txt  task8.json  task8.txt
input/complete/: economarket.json  example.json  example_ml.json  task4a.json
input/partial/: economarket.json  task12.json  task13.json
input/stochastic/: economarket_modified.json  problem_10_3.json  problem_13_2.json  problem_chemistry_systems.json  realtask.json
results/: example_mc.json  example_mc.txt
results/complete/: economarket.json  realtask.json
validate/: example1.json  example1.txt  example2.json  example2.txt  example3.json  example3.txt  example4.json  example4.txt  example5.json  example5.txt  example6.json  example6.txt  task4a_bl.json  task4a_bl.txt  task4a_h.json  task4a_h.txt  task4a_o.json  task4a_o.txt  task4a_p.json  task4a_p.txt  task4a_s.json  task4a_s.txt  task4b_bl.json  task4b_bl.txt  task4b_h.json  task4b_h.txt  task4b_o.json  task4b_o.txt  task4b_p.json  task4b_p.txt  task4b_s.json  task4b_s.txt  task6_bl.json  task6_bl.txt  task6_h.json  task6_h.txt  task6_o.json  task6_o.txt  task6_p.json  task6_p.txt  (+9 more)
(+22 files in other folders)
